
[TestConstructorDeclarations/simple_constructor - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Point",
                span: 1:15-1:20,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.ConstructorDecl{
                    Params: []*dts_parser.Param{
                        &dts_parser.Param{
                            Name: &dts_parser.Ident{
                                Name: "x",
                                span: 1:35-1:36,
                            },
                            Type: &dts_parser.PrimitiveType{
                                Kind: 7,
                                span: 1:38-1:44,
                            },
                            span: 1:35-1:44,
                        },
                        &dts_parser.Param{
                            Name: &dts_parser.Ident{
                                Name: "y",
                                span: 1:46-1:47,
                            },
                            Type: &dts_parser.PrimitiveType{
                                Kind: 7,
                                span: 1:49-1:55,
                            },
                            span: 1:46-1:55,
                        },
                    },
                    span: 1:23-1:55,
                },
            },
            declare: true,
            span: 1:9-1:58,
        },
    },
}
---

[TestConstructorDeclarations/constructor_with_no_parameters - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Empty",
                span: 1:15-1:20,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.ConstructorDecl{
                    span: 1:23-1:34,
                },
            },
            declare: true,
            span: 1:9-1:38,
        },
    },
}
---

[TestConstructorDeclarations/constructor_with_optional_parameters - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Config",
                span: 1:15-1:21,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.ConstructorDecl{
                    Params: []*dts_parser.Param{
                        &dts_parser.Param{
                            Name: &dts_parser.Ident{
                                Name: "host",
                                span: 1:36-1:40,
                            },
                            Type: &dts_parser.PrimitiveType{
                                Kind: 6,
                                span: 1:42-1:48,
                            },
                            span: 1:36-1:48,
                        },
                        &dts_parser.Param{
                            Name: &dts_parser.Ident{
                                Name: "port",
                                span: 1:50-1:54,
                            },
                            Type: &dts_parser.PrimitiveType{
                                Kind: 7,
                                span: 1:57-1:63,
                            },
                            Optional: true,
                            span: 1:50-1:63,
                        },
                    },
                    span: 1:24-1:63,
                },
            },
            declare: true,
            span: 1:9-1:66,
        },
    },
}
---

[TestConstructorDeclarations/constructor_with_rest_parameters - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Variadic",
                span: 1:15-1:23,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.ConstructorDecl{
                    Params: []*dts_parser.Param{
                        &dts_parser.Param{
                            Name: &dts_parser.Ident{
                                Name: "args",
                                span: 1:41-1:45,
                            },
                            Type: &dts_parser.ArrayType{
                                ElementType: &dts_parser.PrimitiveType{
                                    span: 1:47-1:50,
                                },
                                span: 1:47-1:52,
                            },
                            Rest: true,
                            span: 1:38-1:52,
                        },
                    },
                    span: 1:26-1:52,
                },
            },
            declare: true,
            span: 1:9-1:55,
        },
    },
}
---

[TestConstructorDeclarations/public_constructor - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "PublicCtor",
                span: 1:15-1:25,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.ConstructorDecl{
                    Params: []*dts_parser.Param{
                        &dts_parser.Param{
                            Name: &dts_parser.Ident{
                                Name: "x",
                                span: 1:47-1:48,
                            },
                            Type: &dts_parser.PrimitiveType{
                                Kind: 7,
                                span: 1:50-1:56,
                            },
                            span: 1:47-1:56,
                        },
                    },
                    Modifiers: dts_parser.Modifiers{
                        Public: true,
                    },
                    span: 1:35-1:56,
                },
            },
            declare: true,
            span: 1:9-1:59,
        },
    },
}
---

[TestConstructorDeclarations/protected_constructor - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "ProtectedCtor",
                span: 1:15-1:28,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.ConstructorDecl{
                    Modifiers: dts_parser.Modifiers{
                        Protected: true,
                    },
                    span: 1:41-1:52,
                },
            },
            declare: true,
            span: 1:9-1:56,
        },
    },
}
---

[TestConstructorDeclarations/private_constructor - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "PrivateCtor",
                span: 1:15-1:26,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.ConstructorDecl{
                    Modifiers: dts_parser.Modifiers{
                        Private: true,
                    },
                    span: 1:37-1:48,
                },
            },
            declare: true,
            span: 1:9-1:52,
        },
    },
}
---

[TestPropertyDeclarations/simple_property - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Person",
                span: 1:15-1:21,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.PropertyDecl{
                    Name: &dts_parser.Ident{
                        Name: "name",
                        span: 1:24-1:28,
                    },
                    TypeAnn: &dts_parser.PrimitiveType{
                        Kind: 6,
                        span: 1:30-1:36,
                    },
                    span: 1:24-1:36,
                },
            },
            declare: true,
            span: 1:9-1:38,
        },
    },
}
---

[TestPropertyDeclarations/optional_property - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Config",
                span: 1:15-1:21,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.PropertyDecl{
                    Name: &dts_parser.Ident{
                        Name: "port",
                        span: 1:24-1:28,
                    },
                    TypeAnn: &dts_parser.PrimitiveType{
                        Kind: 7,
                        span: 1:31-1:37,
                    },
                    Optional: true,
                    span: 1:24-1:37,
                },
            },
            declare: true,
            span: 1:9-1:39,
        },
    },
}
---

[TestPropertyDeclarations/readonly_property - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Immutable",
                span: 1:15-1:24,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.PropertyDecl{
                    Name: &dts_parser.Ident{
                        Name: "id",
                        span: 1:36-1:38,
                    },
                    TypeAnn: &dts_parser.PrimitiveType{
                        Kind: 7,
                        span: 1:40-1:46,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Readonly: true,
                    },
                    span: 1:36-1:46,
                },
            },
            declare: true,
            span: 1:9-1:48,
        },
    },
}
---

[TestPropertyDeclarations/static_property - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Utils",
                span: 1:15-1:20,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.PropertyDecl{
                    Name: &dts_parser.Ident{
                        Name: "version",
                        span: 1:30-1:37,
                    },
                    TypeAnn: &dts_parser.PrimitiveType{
                        Kind: 6,
                        span: 1:39-1:45,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Static: true,
                    },
                    span: 1:30-1:45,
                },
            },
            declare: true,
            span: 1:9-1:47,
        },
    },
}
---

[TestPropertyDeclarations/public_property - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Public",
                span: 1:15-1:21,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.PropertyDecl{
                    Name: &dts_parser.Ident{
                        Name: "name",
                        span: 1:31-1:35,
                    },
                    TypeAnn: &dts_parser.PrimitiveType{
                        Kind: 6,
                        span: 1:37-1:43,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Public: true,
                    },
                    span: 1:31-1:43,
                },
            },
            declare: true,
            span: 1:9-1:45,
        },
    },
}
---

[TestPropertyDeclarations/private_property - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Private",
                span: 1:15-1:22,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.PropertyDecl{
                    Name: &dts_parser.Ident{
                        Name: "secret",
                        span: 1:33-1:39,
                    },
                    TypeAnn: &dts_parser.PrimitiveType{
                        Kind: 6,
                        span: 1:41-1:47,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Private: true,
                    },
                    span: 1:33-1:47,
                },
            },
            declare: true,
            span: 1:9-1:49,
        },
    },
}
---

[TestPropertyDeclarations/protected_property - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Protected",
                span: 1:15-1:24,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.PropertyDecl{
                    Name: &dts_parser.Ident{
                        Name: "value",
                        span: 1:37-1:42,
                    },
                    TypeAnn: &dts_parser.PrimitiveType{
                        Kind: 7,
                        span: 1:44-1:50,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Protected: true,
                    },
                    span: 1:37-1:50,
                },
            },
            declare: true,
            span: 1:9-1:52,
        },
    },
}
---

[TestPropertyDeclarations/static_readonly_property - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Constants",
                span: 1:15-1:24,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.PropertyDecl{
                    Name: &dts_parser.Ident{
                        Name: "PI",
                        span: 1:43-1:45,
                    },
                    TypeAnn: &dts_parser.PrimitiveType{
                        Kind: 7,
                        span: 1:47-1:53,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Static: true,
                        Readonly: true,
                    },
                    span: 1:43-1:53,
                },
            },
            declare: true,
            span: 1:9-1:55,
        },
    },
}
---

[TestPropertyDeclarations/public_readonly_property - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Readonly",
                span: 1:15-1:23,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.PropertyDecl{
                    Name: &dts_parser.Ident{
                        Name: "id",
                        span: 1:42-1:44,
                    },
                    TypeAnn: &dts_parser.PrimitiveType{
                        Kind: 6,
                        span: 1:46-1:52,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Public: true,
                        Readonly: true,
                    },
                    span: 1:42-1:52,
                },
            },
            declare: true,
            span: 1:9-1:54,
        },
    },
}
---

[TestPropertyDeclarations/property_with_no_type_annotation - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Untyped",
                span: 1:15-1:22,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.PropertyDecl{
                    Name: &dts_parser.Ident{
                        Name: "prop",
                        span: 1:25-1:29,
                    },
                    span: 1:25-1:29,
                },
            },
            declare: true,
            span: 1:9-1:31,
        },
    },
}
---

[TestPropertyDeclarations/property_with_string_literal_name - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "StringKey",
                span: 1:15-1:24,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.PropertyDecl{
                    Name: &dts_parser.StringLiteral{
                        Value: "my-prop",
                        span: 1:27-1:36,
                    },
                    TypeAnn: &dts_parser.PrimitiveType{
                        Kind: 6,
                        span: 1:38-1:44,
                    },
                    span: 1:27-1:44,
                },
            },
            declare: true,
            span: 1:9-1:46,
        },
    },
}
---

[TestPropertyDeclarations/property_with_number_literal_name - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "NumberKey",
                span: 1:15-1:24,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.PropertyDecl{
                    Name: &dts_parser.NumberLiteral{
                        Value: 42,
                        span: 1:27-1:29,
                    },
                    TypeAnn: &dts_parser.PrimitiveType{
                        Kind: 6,
                        span: 1:31-1:37,
                    },
                    span: 1:27-1:37,
                },
            },
            declare: true,
            span: 1:9-1:39,
        },
    },
}
---

[TestPropertyDeclarations/property_with_computed_name - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Computed",
                span: 1:15-1:23,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.PropertyDecl{
                    Name: &dts_parser.Ident{
                        Name: "iterator",
                        span: 1:34-1:42,
                    },
                    span: 1:34-1:42,
                },
            },
            declare: true,
            span: 1:9-1:50,
        },
    },
}
---

[TestMethodDeclarations/simple_method - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Calculator",
                span: 1:15-1:25,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.MethodDecl{
                    Name: &dts_parser.Ident{
                        Name: "add",
                        span: 1:28-1:31,
                    },
                    Params: []*dts_parser.Param{
                        &dts_parser.Param{
                            Name: &dts_parser.Ident{
                                Name: "a",
                                span: 1:32-1:33,
                            },
                            Type: &dts_parser.PrimitiveType{
                                Kind: 7,
                                span: 1:35-1:41,
                            },
                            span: 1:32-1:41,
                        },
                        &dts_parser.Param{
                            Name: &dts_parser.Ident{
                                Name: "b",
                                span: 1:43-1:44,
                            },
                            Type: &dts_parser.PrimitiveType{
                                Kind: 7,
                                span: 1:46-1:52,
                            },
                            span: 1:43-1:52,
                        },
                    },
                    ReturnType: &dts_parser.PrimitiveType{
                        Kind: 7,
                        span: 1:55-1:61,
                    },
                    span: 1:28-1:61,
                },
            },
            declare: true,
            span: 1:9-1:63,
        },
    },
}
---

[TestMethodDeclarations/method_with_no_parameters - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Logger",
                span: 1:15-1:21,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.MethodDecl{
                    Name: &dts_parser.Ident{
                        Name: "log",
                        span: 1:24-1:27,
                    },
                    ReturnType: &dts_parser.PrimitiveType{
                        Kind: 2,
                        span: 1:31-1:35,
                    },
                    span: 1:24-1:35,
                },
            },
            declare: true,
            span: 1:9-1:37,
        },
    },
}
---

[TestMethodDeclarations/method_with_optional_parameters - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Printer",
                span: 1:15-1:22,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.MethodDecl{
                    Name: &dts_parser.Ident{
                        Name: "print",
                        span: 1:25-1:30,
                    },
                    Params: []*dts_parser.Param{
                        &dts_parser.Param{
                            Name: &dts_parser.Ident{
                                Name: "msg",
                                span: 1:31-1:34,
                            },
                            Type: &dts_parser.PrimitiveType{
                                Kind: 6,
                                span: 1:36-1:42,
                            },
                            span: 1:31-1:42,
                        },
                        &dts_parser.Param{
                            Name: &dts_parser.Ident{
                                Name: "times",
                                span: 1:44-1:49,
                            },
                            Type: &dts_parser.PrimitiveType{
                                Kind: 7,
                                span: 1:52-1:58,
                            },
                            Optional: true,
                            span: 1:44-1:58,
                        },
                    },
                    ReturnType: &dts_parser.PrimitiveType{
                        Kind: 2,
                        span: 1:61-1:65,
                    },
                    span: 1:25-1:65,
                },
            },
            declare: true,
            span: 1:9-1:67,
        },
    },
}
---

[TestMethodDeclarations/method_with_rest_parameters - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Sum",
                span: 1:15-1:18,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.MethodDecl{
                    Name: &dts_parser.Ident{
                        Name: "sum",
                        span: 1:21-1:24,
                    },
                    Params: []*dts_parser.Param{
                        &dts_parser.Param{
                            Name: &dts_parser.Ident{
                                Name: "nums",
                                span: 1:28-1:32,
                            },
                            Type: &dts_parser.ArrayType{
                                ElementType: &dts_parser.PrimitiveType{
                                    Kind: 7,
                                    span: 1:34-1:40,
                                },
                                span: 1:34-1:42,
                            },
                            Rest: true,
                            span: 1:25-1:42,
                        },
                    },
                    ReturnType: &dts_parser.PrimitiveType{
                        Kind: 7,
                        span: 1:45-1:51,
                    },
                    span: 1:21-1:51,
                },
            },
            declare: true,
            span: 1:9-1:53,
        },
    },
}
---

[TestMethodDeclarations/optional_method - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Optional",
                span: 1:15-1:23,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.PropertyDecl{
                    Name: &dts_parser.Ident{
                        Name: "method",
                        span: 1:26-1:32,
                    },
                    Optional: true,
                    span: 1:26-1:32,
                },
            },
            declare: true,
            span: 1:9-1:43,
        },
    },
}
---

[TestMethodDeclarations/static_method - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Utils",
                span: 1:15-1:20,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.MethodDecl{
                    Name: &dts_parser.Ident{
                        Name: "parse",
                        span: 1:30-1:35,
                    },
                    Params: []*dts_parser.Param{
                        &dts_parser.Param{
                            Name: &dts_parser.Ident{
                                Name: "str",
                                span: 1:36-1:39,
                            },
                            Type: &dts_parser.PrimitiveType{
                                Kind: 6,
                                span: 1:41-1:47,
                            },
                            span: 1:36-1:47,
                        },
                    },
                    ReturnType: &dts_parser.PrimitiveType{
                        Kind: 12,
                        span: 1:50-1:56,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Static: true,
                    },
                    span: 1:30-1:56,
                },
            },
            declare: true,
            span: 1:9-1:58,
        },
    },
}
---

[TestMethodDeclarations/public_method - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Public",
                span: 1:15-1:21,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.MethodDecl{
                    Name: &dts_parser.Ident{
                        Name: "greet",
                        span: 1:31-1:36,
                    },
                    ReturnType: &dts_parser.PrimitiveType{
                        Kind: 2,
                        span: 1:40-1:44,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Public: true,
                    },
                    span: 1:31-1:44,
                },
            },
            declare: true,
            span: 1:9-1:46,
        },
    },
}
---

[TestMethodDeclarations/private_method - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Private",
                span: 1:15-1:22,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.MethodDecl{
                    Name: &dts_parser.Ident{
                        Name: "encrypt",
                        span: 1:33-1:40,
                    },
                    ReturnType: &dts_parser.PrimitiveType{
                        Kind: 6,
                        span: 1:44-1:50,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Private: true,
                    },
                    span: 1:33-1:50,
                },
            },
            declare: true,
            span: 1:9-1:52,
        },
    },
}
---

[TestMethodDeclarations/protected_method - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Protected",
                span: 1:15-1:24,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.MethodDecl{
                    Name: &dts_parser.Ident{
                        Name: "init",
                        span: 1:37-1:41,
                    },
                    ReturnType: &dts_parser.PrimitiveType{
                        Kind: 2,
                        span: 1:45-1:49,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Protected: true,
                    },
                    span: 1:37-1:49,
                },
            },
            declare: true,
            span: 1:9-1:51,
        },
    },
}
---

[TestMethodDeclarations/abstract_method - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Abstract",
                span: 1:24-1:32,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.MethodDecl{
                    Name: &dts_parser.Ident{
                        Name: "render",
                        span: 1:44-1:50,
                    },
                    ReturnType: &dts_parser.PrimitiveType{
                        Kind: 2,
                        span: 1:54-1:58,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Abstract: true,
                    },
                    span: 1:44-1:58,
                },
            },
            Abstract: true,
            declare: true,
            span: 1:18-1:60,
        },
    },
}
---

[TestMethodDeclarations/async_method - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Async",
                span: 1:15-1:20,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.MethodDecl{
                    Name: &dts_parser.Ident{
                        Name: "fetch",
                        span: 1:29-1:34,
                    },
                    ReturnType: &dts_parser.TypeReference{
                        Name: &dts_parser.Ident{
                            Name: "Promise",
                            span: 1:38-1:45,
                        },
                        TypeArgs: []dts_parser.TypeAnn{
                            &dts_parser.PrimitiveType{
                                span: 1:46-1:49,
                            },
                        },
                        span: 1:38-1:50,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Async: true,
                    },
                    span: 1:29-1:50,
                },
            },
            declare: true,
            span: 1:9-1:52,
        },
    },
}
---

[TestMethodDeclarations/method_with_type_parameters - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Generic",
                span: 1:15-1:22,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.MethodDecl{
                    Name: &dts_parser.Ident{
                        Name: "map",
                        span: 1:25-1:28,
                    },
                    TypeParams: []*dts_parser.TypeParam{
                        &dts_parser.TypeParam{
                            Name: &dts_parser.Ident{
                                Name: "T",
                                span: 1:29-1:30,
                            },
                            span: 1:29-1:30,
                        },
                        &dts_parser.TypeParam{
                            Name: &dts_parser.Ident{
                                Name: "U",
                                span: 1:32-1:33,
                            },
                            span: 1:32-1:33,
                        },
                    },
                    Params: []*dts_parser.Param{
                        &dts_parser.Param{
                            Name: &dts_parser.Ident{
                                Name: "fn",
                                span: 1:35-1:37,
                            },
                            Type: &dts_parser.FunctionType{
                                Params: []*dts_parser.Param{
                                    &dts_parser.Param{
                                        Name: &dts_parser.Ident{
                                            Name: "x",
                                            span: 1:40-1:41,
                                        },
                                        Type: &dts_parser.TypeReference{
                                            Name: &dts_parser.Ident{
                                                Name: "T",
                                                span: 1:43-1:44,
                                            },
                                            span: 1:43-1:44,
                                        },
                                        span: 1:40-1:44,
                                    },
                                },
                                ReturnType: &dts_parser.TypeReference{
                                    Name: &dts_parser.Ident{
                                        Name: "U",
                                        span: 1:49-1:50,
                                    },
                                    span: 1:49-1:50,
                                },
                                span: 1:39-1:50,
                            },
                            span: 1:35-1:50,
                        },
                    },
                    ReturnType: &dts_parser.TypeReference{
                        Name: &dts_parser.Ident{
                            Name: "U",
                            span: 1:53-1:54,
                        },
                        span: 1:53-1:54,
                    },
                    span: 1:25-1:54,
                },
            },
            declare: true,
            span: 1:9-1:56,
        },
    },
}
---

[TestMethodDeclarations/method_with_type_parameters_and_constraints - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Constrained",
                span: 1:15-1:26,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.MethodDecl{
                    Name: &dts_parser.Ident{
                        Name: "process",
                        span: 1:29-1:36,
                    },
                    TypeParams: []*dts_parser.TypeParam{
                        &dts_parser.TypeParam{
                            Name: &dts_parser.Ident{
                                Name: "T",
                                span: 1:37-1:38,
                            },
                            Constraint: &dts_parser.PrimitiveType{
                                Kind: 12,
                                span: 1:47-1:53,
                            },
                            span: 1:37-1:53,
                        },
                    },
                    Params: []*dts_parser.Param{
                        &dts_parser.Param{
                            Name: &dts_parser.Ident{
                                Name: "obj",
                                span: 1:55-1:58,
                            },
                            Type: &dts_parser.TypeReference{
                                Name: &dts_parser.Ident{
                                    Name: "T",
                                    span: 1:60-1:61,
                                },
                                span: 1:60-1:61,
                            },
                            span: 1:55-1:61,
                        },
                    },
                    ReturnType: &dts_parser.TypeReference{
                        Name: &dts_parser.Ident{
                            Name: "T",
                            span: 1:64-1:65,
                        },
                        span: 1:64-1:65,
                    },
                    span: 1:29-1:65,
                },
            },
            declare: true,
            span: 1:9-1:67,
        },
    },
}
---

[TestMethodDeclarations/static_abstract_method - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "StaticAbstract",
                span: 1:24-1:38,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.MethodDecl{
                    Name: &dts_parser.Ident{
                        Name: "create",
                        span: 1:57-1:63,
                    },
                    ReturnType: &dts_parser.PrimitiveType{
                        span: 1:67-1:70,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Static: true,
                        Abstract: true,
                    },
                    span: 1:57-1:70,
                },
            },
            Abstract: true,
            declare: true,
            span: 1:18-1:72,
        },
    },
}
---

[TestMethodDeclarations/public_static_method - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "PublicStatic",
                span: 1:15-1:27,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.MethodDecl{
                    Name: &dts_parser.Ident{
                        Name: "getInstance",
                        span: 1:44-1:55,
                    },
                    ReturnType: &dts_parser.PrimitiveType{
                        span: 1:59-1:62,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Public: true,
                        Static: true,
                    },
                    span: 1:44-1:62,
                },
            },
            declare: true,
            span: 1:9-1:64,
        },
    },
}
---

[TestMethodDeclarations/method_with_no_return_type - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "NoReturn",
                span: 1:15-1:23,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.MethodDecl{
                    Name: &dts_parser.Ident{
                        Name: "doSomething",
                        span: 1:26-1:37,
                    },
                    Params: []*dts_parser.Param{
                        &dts_parser.Param{
                            Name: &dts_parser.Ident{
                                Name: "x",
                                span: 1:38-1:39,
                            },
                            Type: &dts_parser.PrimitiveType{
                                Kind: 7,
                                span: 1:41-1:47,
                            },
                            span: 1:38-1:47,
                        },
                    },
                    span: 1:26-1:47,
                },
            },
            declare: true,
            span: 1:9-1:50,
        },
    },
}
---

[TestMethodDeclarations/method_with_computed_name - 1]
&dts_parser.Module{}
---

[TestGetterAndSetterDeclarations/simple_getter - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Person",
                span: 1:15-1:21,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.GetterDecl{
                    Name: &dts_parser.Ident{
                        Name: "name",
                        span: 1:28-1:32,
                    },
                    ReturnType: &dts_parser.PrimitiveType{
                        Kind: 6,
                        span: 1:36-1:42,
                    },
                    span: 1:24-1:42,
                },
            },
            declare: true,
            span: 1:9-1:44,
        },
    },
}
---

[TestGetterAndSetterDeclarations/simple_setter - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Person",
                span: 1:15-1:21,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.SetterDecl{
                    Name: &dts_parser.Ident{
                        Name: "name",
                        span: 1:28-1:32,
                    },
                    Param: &dts_parser.Param{
                        Name: &dts_parser.Ident{
                            Name: "value",
                            span: 1:33-1:38,
                        },
                        Type: &dts_parser.PrimitiveType{
                            Kind: 6,
                            span: 1:40-1:46,
                        },
                        span: 1:33-1:46,
                    },
                    span: 1:24-1:46,
                },
            },
            declare: true,
            span: 1:9-1:49,
        },
    },
}
---

[TestGetterAndSetterDeclarations/getter_and_setter_pair - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Person",
                span: 1:15-1:21,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.GetterDecl{
                    Name: &dts_parser.Ident{
                        Name: "name",
                        span: 1:28-1:32,
                    },
                    ReturnType: &dts_parser.PrimitiveType{
                        Kind: 6,
                        span: 1:36-1:42,
                    },
                    span: 1:24-1:42,
                },
                &dts_parser.SetterDecl{
                    Name: &dts_parser.Ident{
                        Name: "name",
                        span: 1:48-1:52,
                    },
                    Param: &dts_parser.Param{
                        Name: &dts_parser.Ident{
                            Name: "value",
                            span: 1:53-1:58,
                        },
                        Type: &dts_parser.PrimitiveType{
                            Kind: 6,
                            span: 1:60-1:66,
                        },
                        span: 1:53-1:66,
                    },
                    span: 1:44-1:66,
                },
            },
            declare: true,
            span: 1:9-1:69,
        },
    },
}
---

[TestGetterAndSetterDeclarations/static_getter - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Config",
                span: 1:15-1:21,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.GetterDecl{
                    Name: &dts_parser.Ident{
                        Name: "instance",
                        span: 1:35-1:43,
                    },
                    ReturnType: &dts_parser.TypeReference{
                        Name: &dts_parser.Ident{
                            Name: "Config",
                            span: 1:47-1:53,
                        },
                        span: 1:47-1:53,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Static: true,
                    },
                    span: 1:31-1:53,
                },
            },
            declare: true,
            span: 1:9-1:55,
        },
    },
}
---

[TestGetterAndSetterDeclarations/static_setter - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Config",
                span: 1:15-1:21,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.SetterDecl{
                    Name: &dts_parser.Ident{
                        Name: "instance",
                        span: 1:35-1:43,
                    },
                    Param: &dts_parser.Param{
                        Name: &dts_parser.Ident{
                            Name: "value",
                            span: 1:44-1:49,
                        },
                        Type: &dts_parser.TypeReference{
                            Name: &dts_parser.Ident{
                                Name: "Config",
                                span: 1:51-1:57,
                            },
                            span: 1:51-1:57,
                        },
                        span: 1:44-1:57,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Static: true,
                    },
                    span: 1:31-1:57,
                },
            },
            declare: true,
            span: 1:9-1:60,
        },
    },
}
---

[TestGetterAndSetterDeclarations/public_getter - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Public",
                span: 1:15-1:21,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.GetterDecl{
                    Name: &dts_parser.Ident{
                        Name: "value",
                        span: 1:35-1:40,
                    },
                    ReturnType: &dts_parser.PrimitiveType{
                        Kind: 7,
                        span: 1:44-1:50,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Public: true,
                    },
                    span: 1:31-1:50,
                },
            },
            declare: true,
            span: 1:9-1:52,
        },
    },
}
---

[TestGetterAndSetterDeclarations/private_getter - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Private",
                span: 1:15-1:22,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.GetterDecl{
                    Name: &dts_parser.Ident{
                        Name: "secret",
                        span: 1:37-1:43,
                    },
                    ReturnType: &dts_parser.PrimitiveType{
                        Kind: 6,
                        span: 1:47-1:53,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Private: true,
                    },
                    span: 1:33-1:53,
                },
            },
            declare: true,
            span: 1:9-1:55,
        },
    },
}
---

[TestGetterAndSetterDeclarations/protected_getter - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Protected",
                span: 1:15-1:24,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.GetterDecl{
                    Name: &dts_parser.Ident{
                        Name: "data",
                        span: 1:41-1:45,
                    },
                    ReturnType: &dts_parser.PrimitiveType{
                        span: 1:49-1:52,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Protected: true,
                    },
                    span: 1:37-1:52,
                },
            },
            declare: true,
            span: 1:9-1:54,
        },
    },
}
---

[TestGetterAndSetterDeclarations/public_setter - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Public",
                span: 1:15-1:21,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.SetterDecl{
                    Name: &dts_parser.Ident{
                        Name: "value",
                        span: 1:35-1:40,
                    },
                    Param: &dts_parser.Param{
                        Name: &dts_parser.Ident{
                            Name: "n",
                            span: 1:41-1:42,
                        },
                        Type: &dts_parser.PrimitiveType{
                            Kind: 7,
                            span: 1:44-1:50,
                        },
                        span: 1:41-1:50,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Public: true,
                    },
                    span: 1:31-1:50,
                },
            },
            declare: true,
            span: 1:9-1:53,
        },
    },
}
---

[TestGetterAndSetterDeclarations/private_setter - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Private",
                span: 1:15-1:22,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.SetterDecl{
                    Name: &dts_parser.Ident{
                        Name: "secret",
                        span: 1:37-1:43,
                    },
                    Param: &dts_parser.Param{
                        Name: &dts_parser.Ident{
                            Name: "s",
                            span: 1:44-1:45,
                        },
                        Type: &dts_parser.PrimitiveType{
                            Kind: 6,
                            span: 1:47-1:53,
                        },
                        span: 1:44-1:53,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Private: true,
                    },
                    span: 1:33-1:53,
                },
            },
            declare: true,
            span: 1:9-1:56,
        },
    },
}
---

[TestGetterAndSetterDeclarations/protected_setter - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Protected",
                span: 1:15-1:24,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.SetterDecl{
                    Name: &dts_parser.Ident{
                        Name: "data",
                        span: 1:41-1:45,
                    },
                    Param: &dts_parser.Param{
                        Name: &dts_parser.Ident{
                            Name: "d",
                            span: 1:46-1:47,
                        },
                        Type: &dts_parser.PrimitiveType{
                            span: 1:49-1:52,
                        },
                        span: 1:46-1:52,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Protected: true,
                    },
                    span: 1:37-1:52,
                },
            },
            declare: true,
            span: 1:9-1:55,
        },
    },
}
---

[TestGetterAndSetterDeclarations/getter_with_no_return_type - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "NoType",
                span: 1:15-1:21,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.GetterDecl{
                    Name: &dts_parser.Ident{
                        Name: "value",
                        span: 1:28-1:33,
                    },
                    span: 1:24-1:33,
                },
            },
            declare: true,
            span: 1:9-1:37,
        },
    },
}
---

[TestGetterAndSetterDeclarations/getter_with_computed_name - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Computed",
                span: 1:15-1:23,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.GetterDecl{
                    Name: &dts_parser.ComputedKey{
                        Expr: &dts_parser.MemberExpr{
                            Object: &dts_parser.IdentExpr{
                                Name: "Symbol",
                                span: 1:31-1:37,
                            },
                            Prop: &dts_parser.Ident{
                                Name: "toStringTag",
                                span: 1:38-1:49,
                            },
                            span: 1:31-1:49,
                        },
                        span: 1:30-1:50,
                    },
                    ReturnType: &dts_parser.PrimitiveType{
                        Kind: 6,
                        span: 1:54-1:60,
                    },
                    span: 1:26-1:60,
                },
            },
            declare: true,
            span: 1:9-1:62,
        },
    },
}
---

[TestGetterAndSetterDeclarations/setter_with_computed_name - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Computed",
                span: 1:15-1:23,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.SetterDecl{
                    Name: &dts_parser.ComputedKey{
                        Expr: &dts_parser.MemberExpr{
                            Object: &dts_parser.IdentExpr{
                                Name: "Symbol",
                                span: 1:31-1:37,
                            },
                            Prop: &dts_parser.Ident{
                                Name: "toStringTag",
                                span: 1:38-1:49,
                            },
                            span: 1:31-1:49,
                        },
                        span: 1:30-1:50,
                    },
                    Param: &dts_parser.Param{
                        Name: &dts_parser.Ident{
                            Name: "value",
                            span: 1:51-1:56,
                        },
                        Type: &dts_parser.PrimitiveType{
                            Kind: 6,
                            span: 1:58-1:64,
                        },
                        span: 1:51-1:64,
                    },
                    span: 1:26-1:64,
                },
            },
            declare: true,
            span: 1:9-1:67,
        },
    },
}
---

[TestClassIndexSignatures/string_index_signature - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Dictionary",
                span: 1:15-1:25,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.IndexSignature{
                    KeyName: &dts_parser.Ident{
                        Name: "key",
                        span: 1:29-1:32,
                    },
                    KeyType: &dts_parser.PrimitiveType{
                        Kind: 6,
                        span: 1:34-1:40,
                    },
                    ValueType: &dts_parser.PrimitiveType{
                        span: 1:43-1:46,
                    },
                    span: 1:28-1:46,
                },
            },
            declare: true,
            span: 1:9-1:48,
        },
    },
}
---

[TestClassIndexSignatures/number_index_signature - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Array",
                span: 1:15-1:20,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.IndexSignature{
                    KeyName: &dts_parser.Ident{
                        Name: "index",
                        span: 1:24-1:29,
                    },
                    KeyType: &dts_parser.PrimitiveType{
                        Kind: 7,
                        span: 1:31-1:37,
                    },
                    ValueType: &dts_parser.PrimitiveType{
                        Kind: 6,
                        span: 1:40-1:46,
                    },
                    span: 1:23-1:46,
                },
            },
            declare: true,
            span: 1:9-1:48,
        },
    },
}
---

[TestClassIndexSignatures/readonly_index_signature - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "ReadonlyDict",
                span: 1:15-1:27,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.IndexSignature{
                    KeyName: &dts_parser.Ident{
                        Name: "key",
                        span: 1:40-1:43,
                    },
                    KeyType: &dts_parser.PrimitiveType{
                        Kind: 6,
                        span: 1:45-1:51,
                    },
                    ValueType: &dts_parser.PrimitiveType{
                        Kind: 7,
                        span: 1:54-1:60,
                    },
                    Readonly: true,
                    span: 1:39-1:60,
                },
            },
            declare: true,
            span: 1:9-1:62,
        },
    },
}
---

[TestClassIndexSignatures/symbol_index_signature - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "SymbolMap",
                span: 1:15-1:24,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.IndexSignature{
                    KeyName: &dts_parser.Ident{
                        Name: "sym",
                        span: 1:28-1:31,
                    },
                    KeyType: &dts_parser.PrimitiveType{
                        Kind: 10,
                        span: 1:33-1:39,
                    },
                    ValueType: &dts_parser.PrimitiveType{
                        Kind: 12,
                        span: 1:42-1:48,
                    },
                    span: 1:27-1:48,
                },
            },
            declare: true,
            span: 1:9-1:50,
        },
    },
}
---

[TestCombinedModifiers/public_static_readonly_property - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Constants",
                span: 1:15-1:24,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.PropertyDecl{
                    Name: &dts_parser.Ident{
                        Name: "MAX",
                        span: 1:50-1:53,
                    },
                    TypeAnn: &dts_parser.PrimitiveType{
                        Kind: 7,
                        span: 1:55-1:61,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Public: true,
                        Static: true,
                        Readonly: true,
                    },
                    span: 1:50-1:61,
                },
            },
            declare: true,
            span: 1:9-1:63,
        },
    },
}
---

[TestCombinedModifiers/private_static_method - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Private",
                span: 1:15-1:22,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.MethodDecl{
                    Name: &dts_parser.Ident{
                        Name: "helper",
                        span: 1:40-1:46,
                    },
                    ReturnType: &dts_parser.PrimitiveType{
                        Kind: 2,
                        span: 1:50-1:54,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Private: true,
                        Static: true,
                    },
                    span: 1:40-1:54,
                },
            },
            declare: true,
            span: 1:9-1:56,
        },
    },
}
---

[TestCombinedModifiers/protected_readonly_property - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Protected",
                span: 1:15-1:24,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.PropertyDecl{
                    Name: &dts_parser.Ident{
                        Name: "id",
                        span: 1:46-1:48,
                    },
                    TypeAnn: &dts_parser.PrimitiveType{
                        Kind: 6,
                        span: 1:50-1:56,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Protected: true,
                        Readonly: true,
                    },
                    span: 1:46-1:56,
                },
            },
            declare: true,
            span: 1:9-1:58,
        },
    },
}
---

[TestCombinedModifiers/public_abstract_method - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Abstract",
                span: 1:24-1:32,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.MethodDecl{
                    Name: &dts_parser.Ident{
                        Name: "render",
                        span: 1:51-1:57,
                    },
                    ReturnType: &dts_parser.PrimitiveType{
                        Kind: 2,
                        span: 1:61-1:65,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Public: true,
                        Abstract: true,
                    },
                    span: 1:51-1:65,
                },
            },
            Abstract: true,
            declare: true,
            span: 1:18-1:67,
        },
    },
}
---

[TestCombinedModifiers/protected_static_property - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Protected",
                span: 1:15-1:24,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.PropertyDecl{
                    Name: &dts_parser.Ident{
                        Name: "count",
                        span: 1:44-1:49,
                    },
                    TypeAnn: &dts_parser.PrimitiveType{
                        Kind: 7,
                        span: 1:51-1:57,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Protected: true,
                        Static: true,
                    },
                    span: 1:44-1:57,
                },
            },
            declare: true,
            span: 1:9-1:59,
        },
    },
}
---

[TestCombinedModifiers/public_async_method - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Async",
                span: 1:15-1:20,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.MethodDecl{
                    Name: &dts_parser.Ident{
                        Name: "load",
                        span: 1:36-1:40,
                    },
                    ReturnType: &dts_parser.TypeReference{
                        Name: &dts_parser.Ident{
                            Name: "Promise",
                            span: 1:44-1:51,
                        },
                        TypeArgs: []dts_parser.TypeAnn{
                            &dts_parser.PrimitiveType{
                                Kind: 2,
                                span: 1:52-1:56,
                            },
                        },
                        span: 1:44-1:57,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Public: true,
                        Async: true,
                    },
                    span: 1:36-1:57,
                },
            },
            declare: true,
            span: 1:9-1:59,
        },
    },
}
---

[TestCombinedModifiers/private_readonly_property - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Private",
                span: 1:15-1:22,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.PropertyDecl{
                    Name: &dts_parser.Ident{
                        Name: "secret",
                        span: 1:42-1:48,
                    },
                    TypeAnn: &dts_parser.PrimitiveType{
                        Kind: 6,
                        span: 1:50-1:56,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Private: true,
                        Readonly: true,
                    },
                    span: 1:42-1:56,
                },
            },
            declare: true,
            span: 1:9-1:58,
        },
    },
}
---

[TestComplexClasses/class_with_multiple_member_types - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Person",
                span: 1:15-1:21,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.ConstructorDecl{
                    Params: []*dts_parser.Param{
                        &dts_parser.Param{
                            Name: &dts_parser.Ident{
                                Name: "name",
                                span: 2:17-2:21,
                            },
                            Type: &dts_parser.PrimitiveType{
                                Kind: 6,
                                span: 2:23-2:29,
                            },
                            span: 2:17-2:29,
                        },
                        &dts_parser.Param{
                            Name: &dts_parser.Ident{
                                Name: "age",
                                span: 2:31-2:34,
                            },
                            Type: &dts_parser.PrimitiveType{
                                Kind: 7,
                                span: 2:36-2:42,
                            },
                            span: 2:31-2:42,
                        },
                    },
                    span: 2:5-2:42,
                },
                &dts_parser.PropertyDecl{
                    Name: &dts_parser.Ident{
                        Name: "name",
                        span: 3:5-3:9,
                    },
                    TypeAnn: &dts_parser.PrimitiveType{
                        Kind: 6,
                        span: 3:11-3:17,
                    },
                    span: 3:5-3:17,
                },
                &dts_parser.PropertyDecl{
                    Name: &dts_parser.Ident{
                        Name: "age",
                        span: 4:13-4:16,
                    },
                    TypeAnn: &dts_parser.PrimitiveType{
                        Kind: 7,
                        span: 4:18-4:24,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Private: true,
                    },
                    span: 4:13-4:24,
                },
                &dts_parser.MethodDecl{
                    Name: &dts_parser.Ident{
                        Name: "greet",
                        span: 5:5-5:10,
                    },
                    ReturnType: &dts_parser.PrimitiveType{
                        Kind: 2,
                        span: 5:14-5:18,
                    },
                    span: 5:5-5:18,
                },
                &dts_parser.MethodDecl{
                    Name: &dts_parser.Ident{
                        Name: "create",
                        span: 6:12-6:18,
                    },
                    Params: []*dts_parser.Param{
                        &dts_parser.Param{
                            Name: &dts_parser.Ident{
                                Name: "name",
                                span: 6:19-6:23,
                            },
                            Type: &dts_parser.PrimitiveType{
                                Kind: 6,
                                span: 6:25-6:31,
                            },
                            span: 6:19-6:31,
                        },
                    },
                    ReturnType: &dts_parser.TypeReference{
                        Name: &dts_parser.Ident{
                            Name: "Person",
                            span: 6:34-6:40,
                        },
                        span: 6:34-6:40,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Static: true,
                    },
                    span: 6:12-6:40,
                },
                &dts_parser.GetterDecl{
                    Name: &dts_parser.Ident{
                        Name: "fullName",
                        span: 7:9-7:17,
                    },
                    ReturnType: &dts_parser.PrimitiveType{
                        Kind: 6,
                        span: 7:21-7:27,
                    },
                    span: 7:5-7:27,
                },
                &dts_parser.SetterDecl{
                    Name: &dts_parser.Ident{
                        Name: "fullName",
                        span: 8:9-8:17,
                    },
                    Param: &dts_parser.Param{
                        Name: &dts_parser.Ident{
                            Name: "value",
                            span: 8:18-8:23,
                        },
                        Type: &dts_parser.PrimitiveType{
                            Kind: 6,
                            span: 8:25-8:31,
                        },
                        span: 8:18-8:31,
                    },
                    span: 8:5-8:31,
                },
                &dts_parser.IndexSignature{
                    KeyName: &dts_parser.Ident{
                        Name: "key",
                        span: 9:6-9:9,
                    },
                    KeyType: &dts_parser.PrimitiveType{
                        Kind: 6,
                        span: 9:11-9:17,
                    },
                    ValueType: &dts_parser.PrimitiveType{
                        span: 9:20-9:23,
                    },
                    span: 9:5-9:23,
                },
            },
            declare: true,
            span: 1:9-10:5,
        },
    },
}
---

[TestComplexClasses/abstract_class_with_abstract_and_concrete_members - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Shape",
                span: 1:24-1:29,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.MethodDecl{
                    Name: &dts_parser.Ident{
                        Name: "area",
                        span: 2:14-2:18,
                    },
                    ReturnType: &dts_parser.PrimitiveType{
                        Kind: 7,
                        span: 2:22-2:28,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Abstract: true,
                    },
                    span: 2:14-2:28,
                },
                &dts_parser.MethodDecl{
                    Name: &dts_parser.Ident{
                        Name: "perimeter",
                        span: 3:14-3:23,
                    },
                    ReturnType: &dts_parser.PrimitiveType{
                        Kind: 7,
                        span: 3:27-3:33,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Abstract: true,
                    },
                    span: 3:14-3:33,
                },
                &dts_parser.PropertyDecl{
                    Name: &dts_parser.Ident{
                        Name: "x",
                        span: 4:15-4:16,
                    },
                    TypeAnn: &dts_parser.PrimitiveType{
                        Kind: 7,
                        span: 4:18-4:24,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Protected: true,
                    },
                    span: 4:15-4:24,
                },
                &dts_parser.PropertyDecl{
                    Name: &dts_parser.Ident{
                        Name: "y",
                        span: 5:15-5:16,
                    },
                    TypeAnn: &dts_parser.PrimitiveType{
                        Kind: 7,
                        span: 5:18-5:24,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Protected: true,
                    },
                    span: 5:15-5:24,
                },
                &dts_parser.MethodDecl{
                    Name: &dts_parser.Ident{
                        Name: "move",
                        span: 6:5-6:9,
                    },
                    Params: []*dts_parser.Param{
                        &dts_parser.Param{
                            Name: &dts_parser.Ident{
                                Name: "dx",
                                span: 6:10-6:12,
                            },
                            Type: &dts_parser.PrimitiveType{
                                Kind: 7,
                                span: 6:14-6:20,
                            },
                            span: 6:10-6:20,
                        },
                        &dts_parser.Param{
                            Name: &dts_parser.Ident{
                                Name: "dy",
                                span: 6:22-6:24,
                            },
                            Type: &dts_parser.PrimitiveType{
                                Kind: 7,
                                span: 6:26-6:32,
                            },
                            span: 6:22-6:32,
                        },
                    },
                    ReturnType: &dts_parser.PrimitiveType{
                        Kind: 2,
                        span: 6:35-6:39,
                    },
                    span: 6:5-6:39,
                },
                &dts_parser.MethodDecl{
                    Name: &dts_parser.Ident{
                        Name: "compare",
                        span: 7:12-7:19,
                    },
                    Params: []*dts_parser.Param{
                        &dts_parser.Param{
                            Name: &dts_parser.Ident{
                                Name: "a",
                                span: 7:20-7:21,
                            },
                            Type: &dts_parser.TypeReference{
                                Name: &dts_parser.Ident{
                                    Name: "Shape",
                                    span: 7:23-7:28,
                                },
                                span: 7:23-7:28,
                            },
                            span: 7:20-7:28,
                        },
                        &dts_parser.Param{
                            Name: &dts_parser.Ident{
                                Name: "b",
                                span: 7:30-7:31,
                            },
                            Type: &dts_parser.TypeReference{
                                Name: &dts_parser.Ident{
                                    Name: "Shape",
                                    span: 7:33-7:38,
                                },
                                span: 7:33-7:38,
                            },
                            span: 7:30-7:38,
                        },
                    },
                    ReturnType: &dts_parser.PrimitiveType{
                        Kind: 8,
                        span: 7:41-7:48,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Static: true,
                    },
                    span: 7:12-7:48,
                },
            },
            Abstract: true,
            declare: true,
            span: 1:18-8:5,
        },
    },
}
---

[TestComplexClasses/class_with_generic_methods - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Container",
                span: 1:15-1:24,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.MethodDecl{
                    Name: &dts_parser.Ident{
                        Name: "add",
                        span: 2:5-2:8,
                    },
                    TypeParams: []*dts_parser.TypeParam{
                        &dts_parser.TypeParam{
                            Name: &dts_parser.Ident{
                                Name: "T",
                                span: 2:9-2:10,
                            },
                            span: 2:9-2:10,
                        },
                    },
                    Params: []*dts_parser.Param{
                        &dts_parser.Param{
                            Name: &dts_parser.Ident{
                                Name: "item",
                                span: 2:12-2:16,
                            },
                            Type: &dts_parser.TypeReference{
                                Name: &dts_parser.Ident{
                                    Name: "T",
                                    span: 2:18-2:19,
                                },
                                span: 2:18-2:19,
                            },
                            span: 2:12-2:19,
                        },
                    },
                    ReturnType: &dts_parser.PrimitiveType{
                        Kind: 2,
                        span: 2:22-2:26,
                    },
                    span: 2:5-2:26,
                },
                &dts_parser.PropertyDecl{
                    Name: &dts_parser.Ident{
                        Name: "T",
                        span: 3:9-3:10,
                    },
                    span: 3:9-3:10,
                },
                &dts_parser.PropertyDecl{
                    Name: &dts_parser.Ident{
                        Name: "index",
                        span: 3:12-3:17,
                    },
                    TypeAnn: &dts_parser.PrimitiveType{
                        Kind: 7,
                        span: 3:19-3:25,
                    },
                    span: 3:12-3:25,
                },
                &dts_parser.PropertyDecl{
                    Name: &dts_parser.Ident{
                        Name: "T",
                        span: 3:28-3:29,
                    },
                    span: 3:28-3:29,
                },
                &dts_parser.MethodDecl{
                    Name: &dts_parser.Ident{
                        Name: "map",
                        span: 4:5-4:8,
                    },
                    TypeParams: []*dts_parser.TypeParam{
                        &dts_parser.TypeParam{
                            Name: &dts_parser.Ident{
                                Name: "T",
                                span: 4:9-4:10,
                            },
                            span: 4:9-4:10,
                        },
                        &dts_parser.TypeParam{
                            Name: &dts_parser.Ident{
                                Name: "U",
                                span: 4:12-4:13,
                            },
                            span: 4:12-4:13,
                        },
                    },
                    Params: []*dts_parser.Param{
                        &dts_parser.Param{
                            Name: &dts_parser.Ident{
                                Name: "fn",
                                span: 4:15-4:17,
                            },
                            Type: &dts_parser.FunctionType{
                                Params: []*dts_parser.Param{
                                    &dts_parser.Param{
                                        Name: &dts_parser.Ident{
                                            Name: "x",
                                            span: 4:20-4:21,
                                        },
                                        Type: &dts_parser.TypeReference{
                                            Name: &dts_parser.Ident{
                                                Name: "T",
                                                span: 4:23-4:24,
                                            },
                                            span: 4:23-4:24,
                                        },
                                        span: 4:20-4:24,
                                    },
                                },
                                ReturnType: &dts_parser.TypeReference{
                                    Name: &dts_parser.Ident{
                                        Name: "U",
                                        span: 4:29-4:30,
                                    },
                                    span: 4:29-4:30,
                                },
                                span: 4:19-4:30,
                            },
                            span: 4:15-4:30,
                        },
                    },
                    ReturnType: &dts_parser.ArrayType{
                        ElementType: &dts_parser.TypeReference{
                            Name: &dts_parser.Ident{
                                Name: "U",
                                span: 4:33-4:34,
                            },
                            span: 4:33-4:34,
                        },
                        span: 4:33-4:36,
                    },
                    span: 4:5-4:36,
                },
                &dts_parser.MethodDecl{
                    Name: &dts_parser.Ident{
                        Name: "filter",
                        span: 5:5-5:11,
                    },
                    TypeParams: []*dts_parser.TypeParam{
                        &dts_parser.TypeParam{
                            Name: &dts_parser.Ident{
                                Name: "T",
                                span: 5:12-5:13,
                            },
                            span: 5:12-5:13,
                        },
                    },
                    Params: []*dts_parser.Param{
                        &dts_parser.Param{
                            Name: &dts_parser.Ident{
                                Name: "predicate",
                                span: 5:15-5:24,
                            },
                            Type: &dts_parser.FunctionType{
                                Params: []*dts_parser.Param{
                                    &dts_parser.Param{
                                        Name: &dts_parser.Ident{
                                            Name: "x",
                                            span: 5:27-5:28,
                                        },
                                        Type: &dts_parser.TypeReference{
                                            Name: &dts_parser.Ident{
                                                Name: "T",
                                                span: 5:30-5:31,
                                            },
                                            span: 5:30-5:31,
                                        },
                                        span: 5:27-5:31,
                                    },
                                },
                                ReturnType: &dts_parser.PrimitiveType{
                                    Kind: 8,
                                    span: 5:36-5:43,
                                },
                                span: 5:26-5:43,
                            },
                            span: 5:15-5:43,
                        },
                    },
                    ReturnType: &dts_parser.ArrayType{
                        ElementType: &dts_parser.TypeReference{
                            Name: &dts_parser.Ident{
                                Name: "T",
                                span: 5:46-5:47,
                            },
                            span: 5:46-5:47,
                        },
                        span: 5:46-5:49,
                    },
                    span: 5:5-5:49,
                },
            },
            declare: true,
            span: 1:9-6:5,
        },
    },
}
---

[TestComplexClasses/class_with_all_modifier_combinations - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "AllModifiers",
                span: 1:15-1:27,
            },
            Members: []dts_parser.ClassMember{
                &dts_parser.PropertyDecl{
                    Name: &dts_parser.Ident{
                        Name: "prop1",
                        span: 2:12-2:17,
                    },
                    TypeAnn: &dts_parser.PrimitiveType{
                        Kind: 6,
                        span: 2:19-2:25,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Public: true,
                    },
                    span: 2:12-2:25,
                },
                &dts_parser.PropertyDecl{
                    Name: &dts_parser.Ident{
                        Name: "prop2",
                        span: 3:13-3:18,
                    },
                    TypeAnn: &dts_parser.PrimitiveType{
                        Kind: 7,
                        span: 3:20-3:26,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Private: true,
                    },
                    span: 3:13-3:26,
                },
                &dts_parser.PropertyDecl{
                    Name: &dts_parser.Ident{
                        Name: "prop3",
                        span: 4:15-4:20,
                    },
                    TypeAnn: &dts_parser.PrimitiveType{
                        Kind: 8,
                        span: 4:22-4:29,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Protected: true,
                    },
                    span: 4:15-4:29,
                },
                &dts_parser.PropertyDecl{
                    Name: &dts_parser.Ident{
                        Name: "prop4",
                        span: 5:12-5:17,
                    },
                    TypeAnn: &dts_parser.PrimitiveType{
                        span: 5:19-5:22,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Static: true,
                    },
                    span: 5:12-5:22,
                },
                &dts_parser.PropertyDecl{
                    Name: &dts_parser.Ident{
                        Name: "prop5",
                        span: 6:14-6:19,
                    },
                    TypeAnn: &dts_parser.PrimitiveType{
                        Kind: 12,
                        span: 6:21-6:27,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Readonly: true,
                    },
                    span: 6:14-6:27,
                },
                &dts_parser.PropertyDecl{
                    Name: &dts_parser.Ident{
                        Name: "prop6",
                        span: 7:19-7:24,
                    },
                    TypeAnn: &dts_parser.PrimitiveType{
                        Kind: 6,
                        span: 7:26-7:32,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Public: true,
                        Static: true,
                    },
                    span: 7:19-7:32,
                },
                &dts_parser.PropertyDecl{
                    Name: &dts_parser.Ident{
                        Name: "prop7",
                        span: 8:22-8:27,
                    },
                    TypeAnn: &dts_parser.PrimitiveType{
                        Kind: 7,
                        span: 8:29-8:35,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Private: true,
                        Readonly: true,
                    },
                    span: 8:22-8:35,
                },
                &dts_parser.PropertyDecl{
                    Name: &dts_parser.Ident{
                        Name: "prop8",
                        span: 9:31-9:36,
                    },
                    TypeAnn: &dts_parser.PrimitiveType{
                        Kind: 8,
                        span: 9:38-9:45,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Protected: true,
                        Static: true,
                        Readonly: true,
                    },
                    span: 9:31-9:45,
                },
                &dts_parser.MethodDecl{
                    Name: &dts_parser.Ident{
                        Name: "method1",
                        span: 10:12-10:19,
                    },
                    ReturnType: &dts_parser.PrimitiveType{
                        Kind: 2,
                        span: 10:23-10:27,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Public: true,
                    },
                    span: 10:12-10:27,
                },
                &dts_parser.MethodDecl{
                    Name: &dts_parser.Ident{
                        Name: "method2",
                        span: 11:13-11:20,
                    },
                    ReturnType: &dts_parser.PrimitiveType{
                        Kind: 2,
                        span: 11:24-11:28,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Private: true,
                    },
                    span: 11:13-11:28,
                },
                &dts_parser.MethodDecl{
                    Name: &dts_parser.Ident{
                        Name: "method3",
                        span: 12:15-12:22,
                    },
                    ReturnType: &dts_parser.PrimitiveType{
                        Kind: 2,
                        span: 12:26-12:30,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Protected: true,
                    },
                    span: 12:15-12:30,
                },
                &dts_parser.MethodDecl{
                    Name: &dts_parser.Ident{
                        Name: "method4",
                        span: 13:12-13:19,
                    },
                    ReturnType: &dts_parser.PrimitiveType{
                        Kind: 2,
                        span: 13:23-13:27,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Static: true,
                    },
                    span: 13:12-13:27,
                },
                &dts_parser.MethodDecl{
                    Name: &dts_parser.Ident{
                        Name: "method5",
                        span: 14:19-14:26,
                    },
                    ReturnType: &dts_parser.PrimitiveType{
                        Kind: 2,
                        span: 14:30-14:34,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Public: true,
                        Static: true,
                    },
                    span: 14:19-14:34,
                },
                &dts_parser.MethodDecl{
                    Name: &dts_parser.Ident{
                        Name: "method6",
                        span: 15:20-15:27,
                    },
                    ReturnType: &dts_parser.PrimitiveType{
                        Kind: 2,
                        span: 15:31-15:35,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Private: true,
                        Static: true,
                    },
                    span: 15:20-15:35,
                },
                &dts_parser.MethodDecl{
                    Name: &dts_parser.Ident{
                        Name: "method7",
                        span: 16:22-16:29,
                    },
                    ReturnType: &dts_parser.PrimitiveType{
                        Kind: 2,
                        span: 16:33-16:37,
                    },
                    Modifiers: dts_parser.Modifiers{
                        Protected: true,
                        Static: true,
                    },
                    span: 16:22-16:37,
                },
            },
            declare: true,
            span: 1:9-17:5,
        },
    },
}
---
